--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, sapiente asperiores voluptas fuga magni molestiae vero consequatur error culpa neque distinctio non alias dicta voluptatem itaque aspernatur numquam. Magni, quis?
     <br>
     <span>Another content</span>
+    <div>Some DIV</div>
   </p>
 </body>
 </html>
